--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -1,8 +1,21 @@
+/*==========================================
+=            Bootstrap override            =
+==========================================*/
+/*=====  End of Bootstrap override  ======*/
+body {
+  background: #F1F1F1; }
+
 .products-item {
-  box-shadow: 0 0 3px 0px rgba(51, 51, 51, 0.37);
+  border-bottom: 1px solid #F1F1F1;
+  border-right: 1px solid #F1F1F1;
   padding-bottom: 11px;
   padding-top: 1px;
+  background: #fff;
   /*-------------*/ }
+  .products-item:hover {
+    box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.38);
+    position: relative;
+    z-index: 1; }
   .products-item-date {
     position: absolute;
     top: 5px;
@@ -25,5 +38,7 @@
     /*---*/ }
     .products-item-price:after {
       content: ' din'; }
+
+/*----------  Utility classes  ----------*/
 
 /*# sourceMappingURL=main.css.map */
