--- a/src/main/webapp/WEB-INF/css/main.scss
+++ b/src/main/webapp/WEB-INF/css/main.scss
@@ -2,6 +2,10 @@
 =            Bootstrap override            =
 ==========================================*/
 
+.dropup .dropdown-menu {
+    left: -48px;
+}
+
 
 /*=====  End of Bootstrap override  ======*/
 
@@ -13,8 +17,6 @@ body {
     padding: 8px 0;
     &-totalCost {
         font-size: 19px;
-        padding: 0 8px;
-        margin-right: 9px;
         color: #1CB91C;
         position: relative;
         top: -2px;
@@ -26,13 +28,21 @@ body {
         font-size: 18px;
         position: relative;
         top: -4px;
-        margin-right: 8px;
         padding-left: 2px;
         &:after {
             content: ')';
         }
         &:before {
             content: '(';
+        }
+    }
+    &-link {
+        display: inline;
+        &:hover {
+            color: #337AB7!important;
+            .glyphicon {
+                color: #337AB7!important;
+            }
         }
     }
     .glyphicon {
@@ -48,24 +58,33 @@ body {
             font-size: 15px;
             padding: 3px 11px;
         }
+        &-message {
+            text-align: center;
+            color: #FF6060;
+        }
         &-name {
             font-weight: bold;
             padding-right: 32px;
-            &:before {
-                counter-increment: section;
-                content: counter(section) ". ";
-                font-weight: normal;
-            }
         }
         &-price {
             padding-right: 5px;
+            &:after {
+                content: ' din';
+            }
         }
         &-quantity {
+            color: #1CB91C;
             &:before {
                 content: '(';
             }
             &:after {
                 content: ')';
+            }
+        }
+        li {
+            border-bottom: 1px solid #ECECEC;
+            &:last-child {
+                border: none;
             }
         }
     }
@@ -125,6 +144,72 @@ body {
         }
     }
 }
+
+
+/*============================
+=            Cart            =
+============================*/
+
+.cart {
+    &-item {
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 16px;
+        /****/
+        img {
+            width: 100%;
+        }
+        &-heading {
+            @media (min-width: 768px) {
+                margin-top: 0;
+            }
+        }
+        &-price {
+            text-align: right;
+            &-value {
+                font-size: 21px;
+                top: 4px;
+                position: relative;
+                padding-right: 5px;
+                /****/
+                &:after {
+                    content: 'x';
+                    padding-left: 7px;
+                    position: relative;
+                    top: -1px;
+                    color: #BBB;
+                }
+            }
+            &-input {
+                width: 40px;
+                display: inline;
+            }
+            &-dropdown {
+                float: right;
+                position: relative;
+                top: 1px;
+                /**/
+                > button {
+                    background: #fff;
+                    color: #333;
+                    border: 1px solid #ccc;
+                }
+            }
+            &-popup {
+                left: -102px;
+                padding: 5px 7px;
+                input {
+                    height: 34px;
+                }
+                .input-group-btn button {
+                    padding: 9px 12px;
+                }
+            }
+        }
+    }
+}
+
+
+/*=====  End of Cart  ======*/
 
 
 /*----------  Utility classes  ----------*/
