--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -6,8 +6,16 @@
 
 /*=====  End of Bootstrap override  ======*/
 body {
-  background: #F1F1F1; }
+  background: #F1F1F1;
+  overflow: hidden; }
 
+#main_content_container {
+  height: 100%;
+  padding-top: 52px; }
+
+/*===========================
+=            Nav            =
+===========================*/
 #navbar-cart_view {
   padding: 8px 0; }
   #navbar-cart_view-totalCost {
@@ -62,6 +70,7 @@ body {
     #navbar-cart_view .mini_cart li:last-child {
       border: none; }
 
+/*=====  End of Nav  ======*/
 .products-item {
   border-bottom: 1px solid #F1F1F1;
   border-right: 1px solid #F1F1F1;
@@ -107,17 +116,53 @@ body {
 /*============================
 =            Cart            =
 ============================*/
+#cart-main_box {
+  height: 100%;
+  overflow: auto;
+  padding-top: 20px; }
+
 .cart-item {
   border-bottom: 1px solid #ccc;
   padding-bottom: 16px;
+  position: relative;
   /****/ }
-  .cart-item img {
-    width: 100%; }
+  .cart-item:nth-child(n+2) {
+    margin-top: 20px; }
+  .cart-item-img {
+    background-size: contain;
+    background-position: top center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 176px; }
   @media (min-width: 768px) {
     .cart-item-heading {
       margin-top: 0; } }
+  @media (max-width: 768px) {
+    .cart-item-desc {
+      padding-bottom: 33px; } }
+  .cart-item-price_box {
+    padding-right: 0; }
+  .cart-item-remove_button {
+    position: absolute;
+    top: 0px;
+    right: 15px;
+    box-shadow: 0 0 41px 0 rgba(241, 241, 241, 0.74) inset;
+    border-radius: 4px;
+    padding: 0px 1px 2px 1px; }
   .cart-item-price {
-    text-align: right; }
+    text-align: right;
+    position: absolute;
+    right: 15px;
+    bottom: 0; }
+    .cart-item-price_total {
+      font-size: 30px;
+      text-align: right;
+      clear: both;
+      border-top: 1px solid #aaa;
+      margin-top: 13px;
+      color: #69B330; }
+      .cart-item-price_total:after {
+        content: ' din'; }
     .cart-item-price-value {
       font-size: 21px;
       top: 4px;
@@ -133,17 +178,17 @@ body {
     .cart-item-price-input {
       width: 40px;
       display: inline; }
-    .cart-item-price-dropdown {
+    .cart-item-price-dropup {
       float: right;
       position: relative;
       top: 1px;
       /**/ }
-      .cart-item-price-dropdown > button {
+      .cart-item-price-dropup > button {
         background: #fff;
         color: #333;
         border: 1px solid #ccc; }
     .cart-item-price-popup {
-      left: -102px;
+      left: -122px !important;
       padding: 5px 7px; }
       .cart-item-price-popup input {
         height: 34px; }
