Fronend - Cart(added delete all cart and modified layout), Products (fixed transferring category between /products and /product)

--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -11,13 +11,14 @@ body {
 
 #main_content_container {
   height: 100%;
-  padding-top: 52px; }
+  padding-top: 52px;
+  position: relative; }
 
 /*===========================
 =            Nav            =
 ===========================*/
 #navbar-cart_view {
-  padding: 8px 0; }
+  padding: 8px 11px; }
   #navbar-cart_view-totalCost {
     font-size: 19px;
     color: #1CB91C;
@@ -71,6 +72,11 @@ body {
       border: none; }
 
 /*=====  End of Nav  ======*/
+#products-main_box {
+  height: 100%;
+  overflow: auto;
+  padding-top: 20px; }
+
 .products-item {
   border-bottom: 1px solid #F1F1F1;
   border-right: 1px solid #F1F1F1;
@@ -120,6 +126,28 @@ body {
   height: 100%;
   overflow: auto;
   padding-top: 20px; }
+#cart-total_box {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto; }
+  #cart-total_box-price {
+    background: white;
+    float: right;
+    box-shadow: 0 0 6px 1px #777777;
+    border-radius: 3px 3px 0 0;
+    padding: 8px 19px 10px; }
+    @media (max-width: 768px) {
+      #cart-total_box-price {
+        width: 100%; } }
+    #cart-total_box-price-value {
+      font-size: 30px;
+      text-align: right;
+      color: #616161;
+      margin-bottom: 5px; }
+    #cart-total_box-price-options {
+      text-align: right; }
 
 .cart-item {
   border-bottom: 1px solid #ccc;
@@ -139,7 +167,7 @@ body {
       margin-top: 0; } }
   @media (max-width: 768px) {
     .cart-item-desc {
-      padding-bottom: 33px; } }
+      padding-bottom: 78px; } }
   .cart-item-price_box {
     padding-right: 0; }
   .cart-item-remove_button {
@@ -155,7 +183,7 @@ body {
     right: 15px;
     bottom: 0; }
     .cart-item-price_total {
-      font-size: 30px;
+      font-size: 27px;
       text-align: right;
       clear: both;
       border-top: 1px solid #aaa;
