Frontend - Visual changes

--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -83,21 +83,45 @@ body {
   padding-bottom: 11px;
   padding-top: 1px;
   background: #fff;
+  max-height: 321px;
+  min-height: 321px;
+  overflow: hidden;
   /*-------------*/ }
   .products-item:hover {
     box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.38);
     position: relative;
     z-index: 1; }
-  .products-item-date {
-    position: absolute;
-    top: 5px;
-    right: 8px; }
+  .products-item-head {
+    padding-left: 14px; }
+    .products-item-head h4 {
+      max-width: 56%;
+      float: left; }
+  .products-item-category {
+    padding: 6px 11px 6px 11px;
+    border-radius: 0 0 0 7px;
+    color: #777;
+    float: right;
+    max-width: 44%;
+    margin-bottom: 14px;
+    text-align: right;
+    font-weight: bold;
+    text-shadow: 0 0 3px rgba(46, 109, 164, 0.29);
+    box-shadow: 0 0 8px 0px rgba(51, 51, 51, 0.16);
+    text-transform: uppercase; }
+  .products-item-text_img {
+    overflow: hidden;
+    height: 189px; }
   .products-item-img {
     width: 54%;
     float: left;
     margin-right: 14px; }
   .products-item-more {
     margin-top: 10px; }
+  .products-item-options {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    padding: 0 13px; }
   .products-item-cart {
     float: right;
     margin-top: 10px; }
