--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -248,6 +248,15 @@ body {
         padding: 9px 12px; }
 
 /*=====  End of Cart  ======*/
+/*=============================
+=            Login            =
+=============================*/
+#login-main_box {
+  height: 100%;
+  overflow: auto;
+  padding-top: 20px; }
+
+/*=====  End of Login  ======*/
 /*----------  Utility classes  ----------*/
 
 /*# sourceMappingURL=main.css.map */
