--- a/src/main/webapp/WEB-INF/css/main.scss
+++ b/src/main/webapp/WEB-INF/css/main.scss
@@ -335,4 +335,20 @@ body {
 /*=====  End of Cart  ======*/
 
 
+/*=============================
+=            Login            =
+=============================*/
+
+#login {
+    &-main_box {
+        height: 100%;
+        overflow: auto;
+        padding-top: 20px;
+    }
+}
+
+
+/*=====  End of Login  ======*/
+
+
 /*----------  Utility classes  ----------*/
