--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -255,6 +255,13 @@ body {
   height: 100%;
   overflow: auto;
   padding-top: 20px; }
+#login-input_box {
+  margin-top: 211px; }
+  #login-input_box-username_box {
+    margin-bottom: 22px; }
+#login-login_button {
+  padding: 6px 21px;
+  margin-top: 11px; }
 
 /*=====  End of Login  ======*/
 /*----------  Utility classes  ----------*/
