--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -256,10 +256,32 @@ body {
   overflow: auto;
   padding-top: 20px; }
 #login-input_box {
-  margin-top: 211px; }
+  margin-top: 211px;
+  background: #fff;
+  box-shadow: 0px 2px 2px 0 #afadad;
+  padding: 21px 18px 2px; }
   #login-input_box-username_box {
     margin-bottom: 22px; }
+  #login-input_box-register {
+    text-align: center;
+    padding-bottom: 4px; }
 #login-login_button {
+  padding: 6px 21px;
+  margin-top: 11px; }
+
+/*----------  Register  ----------*/
+#register-main_box {
+  height: 100%;
+  overflow: auto;
+  padding-top: 20px; }
+#register-input_box {
+  margin-top: 211px;
+  background: #fff;
+  box-shadow: 0px 2px 2px 0 #afadad;
+  padding: 21px 18px 2px; }
+  #register-input_box-username_box {
+    margin-bottom: 22px; }
+#register-register_button {
   padding: 6px 21px;
   margin-top: 11px; }
 
