--- a/src/main/webapp/WEB-INF/css/main.scss
+++ b/src/main/webapp/WEB-INF/css/main.scss
@@ -347,11 +347,42 @@ body {
     }
     &-input_box {
         margin-top: 211px;
+        background: #fff;
+        box-shadow: 0px 2px 2px 0 #afadad;
+        padding: 21px 18px 2px;
+        &-username_box {
+            margin-bottom: 22px;
+        }
+        &-register {
+            text-align: center;
+            padding-bottom: 4px;
+        }
+    }
+    &-login_button {
+        padding: 6px 21px;
+        margin-top: 11px;
+    }
+}
+
+
+/*----------  Register  ----------*/
+
+#register {
+    &-main_box {
+        height: 100%;
+        overflow: auto;
+        padding-top: 20px;
+    }
+    &-input_box {
+        margin-top: 211px;
+        background: #fff;
+        box-shadow: 0px 2px 2px 0 #afadad;
+        padding: 21px 18px 2px;
         &-username_box {
             margin-bottom: 22px;
         }
     }
-    &-login_button {
+    &-register_button {
         padding: 6px 21px;
         margin-top: 11px;
     }
