--- a/src/main/webapp/WEB-INF/css/main.scss
+++ b/src/main/webapp/WEB-INF/css/main.scss
@@ -132,14 +132,6 @@ body {
 
 /*=====  End of Nav  ======*/
 
-#products {
-    &-main_box {
-        height: 100%;
-        overflow: auto;
-        padding-top: 20px;
-    }
-}
-
 .products {
     &-item {
         border-bottom: 1px solid #F1F1F1;
@@ -229,11 +221,6 @@ body {
 ============================*/
 
 #cart {
-    &-main_box {
-        height: 100%;
-        overflow: auto;
-        padding-top: 20px;
-    }
     &-total_box {
         position: absolute;
         bottom: 0;
@@ -419,4 +406,117 @@ body {
 /*=====  End of Login  ======*/
 
 
+/*===================================
+=            Admin panel            =
+===================================*/
+
+.admin_panel-wrapper {
+    padding: 0 0 0 250px!important;
+    transition: all 0.5s ease;
+    &.toggled {
+        padding: 0!important;
+        #admin_panel-sidebar-toggle {
+            &-right {
+                display: block;
+            }
+            &-left {
+                display: none;
+            }
+        }
+        #admin_panel-sidebar {
+            left: -250px;
+        }
+    }
+}
+
+#admin_panel {
+    &-content_box {
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+    }
+    /*----------  Sidebar  ----------*/
+    &-sidebar {
+        position: fixed;
+        background: #333;
+        top: 51px;
+        left: 0;
+        height: 100%;
+        width: 250px;
+        transition: all 0.5s ease;
+        &-toggle {
+            font-size: 27px;
+            position: absolute;
+            bottom: 56px;
+            right: -29px;
+            cursor: pointer;
+            width: 62px;
+            &-left {
+                transition: all 0.5s ease;
+                color: #fff;
+                float: left;
+            }
+            &-right {
+                transition: all 0.5s ease;
+                float: right;
+                display: none;
+            }
+        }
+        &-header {
+            color: #999999;
+            padding: 6px 0 0 19px;
+        }
+        &-nav {
+            /*position: absolute;*/
+            top: 0;
+            width: 250px;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            .sidebar-nav_item {
+                text-indent: 20px;
+                line-height: 40px;
+                &-link {
+                    display: block;
+                    text-decoration: none;
+                    color: #999999;
+                    &:hover {
+                        text-decoration: none;
+                        color: #fff;
+                        background: rgba(255, 255, 255, 0.2);
+                    }
+                    .glyphicon {
+                        margin-left: -19px;
+                        padding-right: 10px;
+                    }
+                }
+            }
+        }
+    }
+    /*----------  Products  ----------*/
+    &-products {
+        .admin_panel-products-col {
+            &-desc {
+                width: 58%;
+            }
+            &-edit,
+            &-delete {
+                vertical-align: middle;
+                text-align: center;
+                width: 61px;
+            }
+        }
+    }
+}
+
+
+/*=====  End of Admin panel  ======*/
+
+
 /*----------  Utility classes  ----------*/
+
+.page-main_box {
+    height: 100%;
+    overflow: auto;
+    padding-top: 20px;
+}
