--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -369,13 +369,18 @@ body {
   #admin_panel-products .admin_panel-products-col-edit, #admin_panel-products .admin_panel-products-col-delete {
     vertical-align: middle;
     text-align: center;
-    width: 61px; }
+    width: 51px;
+    padding: 0 0px; }
 
 /*=====  End of Admin panel  ======*/
-/*----------  Utility classes  ----------*/
+/*----------  General Classes  ----------*/
 .page-main_box {
   height: 100%;
   overflow: auto;
   padding-top: 20px; }
+
+/*----------  Utility classes  ----------*/
+.vertical-middle {
+  vertical-align: middle !important; }
 
 /*# sourceMappingURL=main.css.map */
