--- a/src/main/webapp/WEB-INF/css/main.scss
+++ b/src/main/webapp/WEB-INF/css/main.scss
@@ -503,7 +503,8 @@ body {
             &-delete {
                 vertical-align: middle;
                 text-align: center;
-                width: 61px;
+                width: 51px;
+                padding: 0 0px;
             }
         }
     }
@@ -513,10 +514,17 @@ body {
 /*=====  End of Admin panel  ======*/
 
 
-/*----------  Utility classes  ----------*/
+/*----------  General Classes  ----------*/
 
 .page-main_box {
     height: 100%;
     overflow: auto;
     padding-top: 20px;
+}
+
+
+/*----------  Utility classes  ----------*/
+
+.vertical-middle {
+    vertical-align: middle!important;
 }
