Fronend - Admin panel - Products (done with list and delete of products) - Categories (done with list of cats)

--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -309,14 +309,28 @@ body {
       display: none; }
     .admin_panel-wrapper.toggled #admin_panel-sidebar {
       left: -250px; }
+.admin_panel-products-delete_box {
+  position: relative; }
+.admin_panel-products-delete_popup {
+  right: 100%;
+  left: auto;
+  top: -11px;
+  min-width: auto;
+  width: 104px;
+  padding: 8px 0;
+  text-align: center; }
 
 #admin_panel {
   /*----------  Sidebar  ----------*/
-  /*----------  Products  ----------*/ }
+  /*----------  Products  ----------*/
+  /*----------  Categories  ----------*/ }
   #admin_panel-content_box {
     width: 100%;
     height: 100%;
     padding: 20px; }
+    #admin_panel-content_box h2 {
+      margin-top: 0;
+      margin-bottom: 20px; }
   #admin_panel-sidebar {
     position: fixed;
     background: #333;
@@ -364,6 +378,8 @@ body {
           #admin_panel-sidebar-nav .sidebar-nav_item-link .glyphicon {
             margin-left: -19px;
             padding-right: 10px; }
+  #admin_panel-products tbody tr {
+    background: #f5f5f5; }
   #admin_panel-products .admin_panel-products-col-desc {
     width: 58%; }
   #admin_panel-products .admin_panel-products-col-edit, #admin_panel-products .admin_panel-products-col-delete {
@@ -371,6 +387,12 @@ body {
     text-align: center;
     width: 51px;
     padding: 0 0px; }
+  #admin_panel-products .admin_panel-product-disabled {
+    background: rgba(217, 83, 79, 0.08); }
+  #admin_panel-categories .categories-col-edit, #admin_panel-categories .categories-col-remove {
+    width: 59px; }
+  #admin_panel-categories tbody tr {
+    background: #f5f5f5; }
 
 /*=====  End of Admin panel  ======*/
 /*----------  General Classes  ----------*/
