--- a/src/main/webapp/WEB-INF/css/main.scss
+++ b/src/main/webapp/WEB-INF/css/main.scss
@@ -410,21 +410,37 @@ body {
 =            Admin panel            =
 ===================================*/
 
-.admin_panel-wrapper {
-    padding: 0 0 0 250px!important;
-    transition: all 0.5s ease;
-    &.toggled {
-        padding: 0!important;
-        #admin_panel-sidebar-toggle {
-            &-right {
-                display: block;
+.admin_panel {
+    &-wrapper {
+        padding: 0 0 0 250px!important;
+        transition: all 0.5s ease;
+        &.toggled {
+            padding: 0!important;
+            #admin_panel-sidebar-toggle {
+                &-right {
+                    display: block;
+                }
+                &-left {
+                    display: none;
+                }
             }
-            &-left {
-                display: none;
+            #admin_panel-sidebar {
+                left: -250px;
             }
         }
-        #admin_panel-sidebar {
-            left: -250px;
+    }
+    &-products {
+        &-delete_box {
+            position: relative;
+        }
+        &-delete_popup {
+            right: 100%;
+            left: auto;
+            top: -11px;
+            min-width: auto;
+            width: 104px;
+            padding: 8px 0;
+            text-align: center;
         }
     }
 }
@@ -434,6 +450,10 @@ body {
         width: 100%;
         height: 100%;
         padding: 20px;
+        h2 {
+            margin-top: 0;
+            margin-bottom: 20px;
+        }
     }
     /*----------  Sidebar  ----------*/
     &-sidebar {
@@ -495,6 +515,9 @@ body {
     }
     /*----------  Products  ----------*/
     &-products {
+        tbody tr {
+            background: #f5f5f5;
+        }
         .admin_panel-products-col {
             &-desc {
                 width: 58%;
@@ -506,6 +529,28 @@ body {
                 width: 51px;
                 padding: 0 0px;
             }
+        }
+        .admin_panel-product-disabled {
+            background: rgba(217, 83, 79, 0.08);
+        }
+    }
+    /*----------  Categories  ----------*/
+    &-categories {
+        .categories {
+            &-col {
+                &-edit,
+                &-remove {
+                    width: 59px;
+                }
+            }
+            &-item {
+                &-name {
+                    &-value {}
+                }
+            }
+        }
+        tbody tr {
+            background: #f5f5f5;
         }
     }
 }
