Frontend - Admin panel Users (began implementing)

--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -372,8 +372,8 @@ body {
           text-decoration: none;
           color: #999999; }
           #admin_panel-sidebar-nav .sidebar-nav_item-link.active {
-            background: #f1f1f1;
-            color: #333; }
+            background: #f1f1f1 !important;
+            color: #333 !important; }
           #admin_panel-sidebar-nav .sidebar-nav_item-link:hover {
             text-decoration: none;
             color: #fff;
