--- a/src/main/webapp/WEB-INF/css/main.scss
+++ b/src/main/webapp/WEB-INF/css/main.scss
@@ -501,8 +501,8 @@ body {
                     text-decoration: none;
                     color: #999999;
                     &.active {
-                        background: #f1f1f1;
-                        color: #333;
+                        background: #f1f1f1!important;
+                        color: #333!important;
                     }
                     &:hover {
                         text-decoration: none;
