Frontend - Storage Management (added files)

--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -298,17 +298,23 @@ body {
 /*===================================
 =            Admin panel            =
 ===================================*/
-.admin_panel-wrapper {
+.admin_panel-wrapper,
+.stor_manager-wrapper {
   padding: 0 0 0 250px !important;
   transition: all 0.5s ease; }
-  .admin_panel-wrapper.toggled {
+  .admin_panel-wrapper.toggled,
+  .stor_manager-wrapper.toggled {
     padding: 0 !important; }
-    .admin_panel-wrapper.toggled #admin_panel-sidebar-toggle-right {
+    .admin_panel-wrapper.toggled #admin_panel-sidebar-toggle-right,
+    .stor_manager-wrapper.toggled #admin_panel-sidebar-toggle-right {
       display: block; }
-    .admin_panel-wrapper.toggled #admin_panel-sidebar-toggle-left {
+    .admin_panel-wrapper.toggled #admin_panel-sidebar-toggle-left,
+    .stor_manager-wrapper.toggled #admin_panel-sidebar-toggle-left {
       display: none; }
-    .admin_panel-wrapper.toggled #admin_panel-sidebar {
+    .admin_panel-wrapper.toggled #admin_panel-sidebar,
+    .stor_manager-wrapper.toggled #admin_panel-sidebar {
       left: -250px; }
+
 .admin_panel-products-delete_box {
   position: relative; }
 .admin_panel-products-delete_popup {
@@ -320,18 +326,20 @@ body {
   padding: 8px 0;
   text-align: center; }
 
-#admin_panel {
-  /*----------  Sidebar  ----------*/
-  /*----------  Products  ----------*/
-  /*----------  Categories  ----------*/ }
-  #admin_panel-content_box {
+#admin_panel,
+#stor_manager {
+  /*----------  Sidebar  ----------*/ }
+  #admin_panel-content_box,
+  #stor_manager-content_box {
     width: 100%;
     height: 100%;
     padding: 20px; }
-    #admin_panel-content_box h2 {
+    #admin_panel-content_box h2,
+    #stor_manager-content_box h2 {
       margin-top: 0;
       margin-bottom: 20px; }
-  #admin_panel-sidebar {
+  #admin_panel-sidebar,
+  #stor_manager-sidebar {
     position: fixed;
     background: #333;
     top: 51px;
@@ -339,48 +347,62 @@ body {
     height: 100%;
     width: 250px;
     transition: all 0.5s ease; }
-    #admin_panel-sidebar-toggle {
+    #admin_panel-sidebar-toggle,
+    #stor_manager-sidebar-toggle {
       font-size: 27px;
       position: absolute;
       bottom: 56px;
       right: -29px;
       cursor: pointer;
       width: 62px; }
-      #admin_panel-sidebar-toggle-left {
+      #admin_panel-sidebar-toggle-left,
+      #stor_manager-sidebar-toggle-left {
         transition: all 0.5s ease;
         color: #fff;
         float: left; }
-      #admin_panel-sidebar-toggle-right {
+      #admin_panel-sidebar-toggle-right,
+      #stor_manager-sidebar-toggle-right {
         transition: all 0.5s ease;
         float: right;
         display: none; }
-    #admin_panel-sidebar-header {
+    #admin_panel-sidebar-header,
+    #stor_manager-sidebar-header {
       color: #999999;
       padding: 6px 0 0 19px; }
-    #admin_panel-sidebar-nav {
+    #admin_panel-sidebar-nav,
+    #stor_manager-sidebar-nav {
       /*position: absolute;*/
       top: 0;
       width: 250px;
       margin: 0;
       padding: 0;
       list-style: none; }
-      #admin_panel-sidebar-nav .sidebar-nav_item {
+      #admin_panel-sidebar-nav .sidebar-nav_item,
+      #stor_manager-sidebar-nav .sidebar-nav_item {
         text-indent: 20px;
         line-height: 40px; }
-        #admin_panel-sidebar-nav .sidebar-nav_item-link {
+        #admin_panel-sidebar-nav .sidebar-nav_item-link,
+        #stor_manager-sidebar-nav .sidebar-nav_item-link {
           display: block;
           text-decoration: none;
           color: #999999; }
-          #admin_panel-sidebar-nav .sidebar-nav_item-link.active {
+          #admin_panel-sidebar-nav .sidebar-nav_item-link.active,
+          #stor_manager-sidebar-nav .sidebar-nav_item-link.active {
             background: #f1f1f1 !important;
             color: #333 !important; }
-          #admin_panel-sidebar-nav .sidebar-nav_item-link:hover {
+          #admin_panel-sidebar-nav .sidebar-nav_item-link:hover,
+          #stor_manager-sidebar-nav .sidebar-nav_item-link:hover {
             text-decoration: none;
             color: #fff;
             background: rgba(255, 255, 255, 0.2); }
-          #admin_panel-sidebar-nav .sidebar-nav_item-link .glyphicon {
+          #admin_panel-sidebar-nav .sidebar-nav_item-link .glyphicon,
+          #stor_manager-sidebar-nav .sidebar-nav_item-link .glyphicon {
             margin-left: -19px;
             padding-right: 10px; }
+
+#admin_panel {
+  /*----------  Products  ----------*/
+  /*----------  Categories  ----------*/ }
   #admin_panel-products tbody tr {
     background: #f5f5f5; }
   #admin_panel-products .admin_panel-products-col-desc {
@@ -421,8 +443,7 @@ body {
     #admin_panel-categories .categories-add #categories-add-button {
       top: 0; }
   #admin_panel-categories-items {
-    height: 100%;
-    overflow: auto; }
+    height: 100%; }
 
 /*=====  End of Admin panel  ======*/
 /*----------  General Classes  ----------*/
