--- a/src/main/webapp/WEB-INF/css/main.scss
+++ b/src/main/webapp/WEB-INF/css/main.scss
@@ -410,7 +410,8 @@ body {
 =            Admin panel            =
 ===================================*/
 
-.admin_panel {
+.admin_panel,
+.stor_manager {
     &-wrapper {
         padding: 0 0 0 250px!important;
         transition: all 0.5s ease;
@@ -429,6 +430,9 @@ body {
             }
         }
     }
+}
+
+.admin_panel {
     &-products {
         &-delete_box {
             position: relative;
@@ -445,7 +449,8 @@ body {
     }
 }
 
-#admin_panel {
+#admin_panel,
+#stor_manager {
     &-content_box {
         width: 100%;
         height: 100%;
@@ -517,6 +522,9 @@ body {
             }
         }
     }
+}
+
+#admin_panel {
     /*----------  Products  ----------*/
     &-products {
         tbody tr {
@@ -598,7 +606,6 @@ body {
         }
         &-items {
             height: 100%;
-            overflow: auto;
         }
     }
 }
